// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service breakdown panel component renders empty service breakdown panel 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiText euiText--medium"
      >
        <span
          class="panel-title"
        >
          Time spent by service
        </span>
      </div>
      <hr
        class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrow3"
        />
        <div
          class="euiFlexItem euiFlexItem--flexGrow3"
        />
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
    </div>
  </div>
</body>
`;

exports[`Service breakdown panel component renders service breakdown panel 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiText euiText--medium"
      >
        <span
          class="panel-title"
        >
          Time spent by service
        </span>
      </div>
      <hr
        class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrow3"
        >
          <div
            id="explorerPlotComponent"
            style="width: 100%; height: 100%;"
          />
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrow3"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionColumn"
            style="max-height: 260px; overflow-y: auto; padding-right: 20px;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiHealth euiHealth--textSizeS"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--customColor euiIcon-isLoading"
                        focusable="false"
                        height="16"
                        role="img"
                        style="color: rgb(116, 146, 231);"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                    </div>
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      inventory
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiText euiText--small"
                >
                  100
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
    </div>
  </div>
</body>
`;
